--- a/Saavari_Driver/app/src/main/res/values/colors.xml
+++ b/Saavari_Driver/app/src/main/res/values/colors.xml
@@ -1,10 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
-    <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
+    <color name="colorPrimary">#6200EE</color>
+    <color name="colorPrimaryDark">#3700B3</color>
+    <color name="colorAccent">#03DAC5</color>
+    <color name="color_transparent">#00FFFFFF</color>
+    <color name = "app_color">#87CEFA</color>
+
+    <color name="BlackThemePrimary">#FF000000</color>
+    <color name = "BlackThemeSecondary">#15FFFFFF</color>
+
+    <color name="DarkRedThemePrimary">#FF2559</color>
+    <color name = "DarkRedThemeSecondary">#15FFFFFF</color>
+
+    <color name="RedThemePrimary">#FF2559</color>
+    <color name="RedThemeSecondary">#FFFFFF</color>
+
+    <color name="BlueThemePrimary">#1757B7</color>
+    <color name = "BlueThemeSecondary">#FFFFFF</color>
+
+    <color name="DarkBlueThemePrimary">#1757B7</color>
+    <color name = "DarkBlueThemeSecondary">#15FFFFFF</color>
+
+    <color name = "neutralGray">#7F8086</color>
+
+    <color name = "maps_blue">#4A80F5</color>
+    <color name = "success_green">#5BC236</color>
 </resources>
