ThemeVar: Improve singleton pattern & add tests
- Use IntDef to ensure only valid themes are set
- Add Instrumentation Tests for ThemeVar

--- a/Saavari_Driver/app/src/main/res/values/attr.xml
+++ b/Saavari_Driver/app/src/main/res/values/attr.xml
@@ -10,4 +10,5 @@
     <attr name = "lightForegroundColor" format = "color"/>
     <attr name = "flatGray" format = "color"/>
     <attr name = "foregroundItemColor" format="color"/>
+    <attr name="themeName" format="string"/>
 </resources>
