Google Maps Integeration and Ride Activity

--- a/Saavari_Driver/app/src/main/res/layout/activity_login.xml
+++ b/Saavari_Driver/app/src/main/res/layout/activity_login.xml
@@ -133,6 +133,7 @@
         android:background="?attr/foregroundColor"
         android:backgroundTint="?attr/foregroundColor"
         android:elevation="2dp"
+        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
