Rider App: UI Testing & Bug Fixes
- Book A Trip UI testing: Ride Config Input Fields
- Search Ride Testing: With & Without Network
- Give Feedback UI Testing: State Management & rating submission
- Fix NullPointerException due to null LatLng in Location constructor

--- a/Savaari_Rider/app/src/main/res/layout/activity_ride.xml
+++ b/Savaari_Rider/app/src/main/res/layout/activity_ride.xml
@@ -38,6 +38,7 @@
             android:orientation="vertical"
             android:padding="8dp"
             android:shadowColor="?attr/textColor">
+            android:shadowColor="?attr/textColor">
 
             <androidx.fragment.app.FragmentContainerView
                 android:id="@+id/autocomplete_fragment_src"
