--- a/Saavari_Driver/app/src/main/res/layout/activity_ride.xml
+++ b/Saavari_Driver/app/src/main/res/layout/activity_ride.xml
@@ -146,7 +146,7 @@
             android:layout_marginBottom="25dp"
             />
         <include
-            layout="@layout/rate_ride_card"
+            layout="@layout/card_rate_ride"
             android:layout_marginBottom="20dp"
             android:layout_height="wrap_content"
             android:layout_width="match_parent"
