--- a/Saavari_Driver/app/src/main/res/layout/fragment_registration_menu.xml
+++ b/Saavari_Driver/app/src/main/res/layout/fragment_registration_menu.xml
@@ -35,6 +35,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
-            tools:listitem="@layout/vehicle_card"/>
+            tools:listitem="@layout/card_vehicle"/>
     </LinearLayout>
 </FrameLayout>
