--- a/Savaari_Rider/app/src/main/res/layout/ride_entry.xml
+++ b/Savaari_Rider/app/src/main/res/layout/ride_entry.xml
@@ -1,35 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/ride_type_config"
+    android:id="@+id/end_of_ride_details_panel"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:gravity="start|center_vertical"
+    android:gravity="bottom"
     android:orientation="vertical"
-    android:paddingStart="46dp"
-    android:paddingEnd="10dp"
-    android:paddingTop="20dp">
+    android:layout_alignParentBottom="true"
+    android:paddingTop="30dp"
+    android:paddingLeft="40dp"
+    android:outlineProvider="bounds"
+    android:background="@null"
+    android:elevation="2dp">
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        >
 
         <TextView
             android:id="@+id/driver_name"
-            android:layout_width="160dp"
-            android:layout_height="50dp"
-            android:gravity="center_vertical|start"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="start"
+            android:layout_marginBottom="16dp"
             android:text="Nabeel Danish"
-            android:textAlignment="viewStart"
             android:textAppearance="@style/TextAppearance.AppCompat.Display4"
             android:textColor="?attr/textColor"
-            android:textSize="16sp" />
+            android:textSize="26dp" />
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"/>
 
         <TextView
             android:id="@+id/number_plate"
+            app:drawableTint="@color/success_green"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:gravity="end"
+            android:layout_marginEnd="40dp"
             android:background="@drawable/transparent_rounded_btn"
             android:backgroundTint="@color/maps_blue"
             android:padding="4dp"
@@ -37,43 +49,80 @@
             android:paddingEnd="8dp"
             android:text="AES-216"
             android:textColor="?attr/textColor"
-            android:textSize="18sp"
-            app:drawableTint="@color/success_green" />
+            android:textSize="18sp" />
+
     </LinearLayout>
 
-    <TextView
-        android:id="@+id/date"
-        android:layout_width="wrap_content"
-        android:layout_height="50dp"
-        android:layout_marginEnd="0dp"
-        android:gravity="center_vertical|end"
-        android:paddingEnd="10dp"
-        android:text="Date: 12th July"
-        android:textAlignment="viewEnd"
-        android:textColor="?attr/textColor"
-        android:textSize="16sp" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal">
 
-    <TextView
-        android:id="@+id/duration"
-        android:layout_width="wrap_content"
-        android:layout_height="50dp"
-        android:layout_marginEnd="0dp"
-        android:gravity="center_vertical|end"
-        android:paddingEnd="10dp"
-        android:text="Duration: 18:05 - 18:35"
-        android:textAlignment="viewEnd"
-        android:textColor="?attr/textColor"
-        android:textSize="16sp" />
+        <TextView
+            android:id="@+id/date"
+            android:layout_width="wrap_content"
+            android:layout_height="50dp"
+            android:layout_marginEnd="0dp"
+            android:gravity="center_vertical|end"
+            android:paddingEnd="10dp"
+            android:text="Date: 12th July"
+            android:textAlignment="viewEnd"
+            android:textColor="?attr/textColor"
+            android:textSize="16sp" />
 
-    <TextView
-        android:id="@+id/fare"
-        android:layout_width="wrap_content"
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"/>
+
+        <TextView
+            android:id="@+id/duration"
+            android:layout_width="wrap_content"
+            android:layout_height="50dp"
+            android:layout_marginEnd="40dp"
+            android:gravity="end"
+            android:paddingEnd="10dp"
+            android:text="Duration: 18:05 - 18:35"
+            android:textAlignment="viewEnd"
+            android:textColor="?attr/textColor"
+            android:textSize="16sp" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/payment_option_reminder_config"
+        android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:layout_marginEnd="0dp"
-        android:gravity="center_vertical|end"
-        android:paddingEnd="10dp"
-        android:text="Fare PKR 85"
-        android:textAlignment="viewEnd"
-        android:textColor="?attr/textColor"
-        android:textSize="16sp" />
+        android:layout_marginEnd="24dp"
+        android:layout_marginBottom="56dp"
+        android:layout_marginTop="8dp"
+        android:background="@drawable/rounded_box"
+        android:backgroundTint="?attr/foregroundColor"
+        android:gravity="start|center_vertical"
+        android:orientation="horizontal"
+        android:paddingStart="10dp"
+        android:paddingEnd="10dp">
+
+        <ImageView
+            android:id="@+id/payment_option_reminder_img"
+            android:layout_width="70dp"
+            android:layout_height="45dp"
+            android:gravity="center_vertical|start"
+            android:scaleX="0.9"
+            android:scaleY="0.9"
+            android:src="@drawable/ic_money" />
+
+        <TextView
+            android:id="@+id/fare"
+            android:layout_width="160dp"
+            android:layout_height="50dp"
+            android:gravity="center_vertical|start"
+            android:paddingStart="16dp"
+            android:text="PKR 85"
+            android:textAlignment="viewStart"
+            android:textAppearance="@style/TextAppearance.AppCompat.Display4"
+            android:textColor="?attr/negativeTextColor"
+            android:textSize="16sp" />
+    </LinearLayout>
+
 </LinearLayout>
