Admin Panel Respond to Complaint Use Case
- Added new webpage for View complaints.
- Added new webpage for View Ride Details.
- Added new webpage for Respond to Complaints
- Fixed the dropdown menu in Respond to Vehicle Request Page

--- a/Admin Webpage/styles.css
+++ b/Admin Webpage/styles.css
@@ -142,6 +142,13 @@ button:hover
   color: var(--clr-white);
   background: var(--clr-black);
 }
+.checked {
+  color: orange;
+}
+.map {
+  height: 400px;
+  width: 100%;
+}
 
 /* Section Class */
 .section {
